--- a/pharmacy.html
+++ b/pharmacy.html
@@ -81,6 +81,11 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- Map -->
+                            <div id="map-container-google-1">
+                                <iframe src="https://maps.google.com/maps?q=manhatan&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0;width:100%" allowfullscreen></iframe>
+                            </div>
+                            <!-- //Map -->
                         </div>
                     </div>
                 </div>
@@ -108,6 +113,11 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- Map -->
+                            <div id="map-container-google-1">
+                                <iframe src="https://maps.google.com/maps?q=manhatan&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0;width:100%" allowfullscreen></iframe>
+                            </div>
+                            <!-- //Map -->
                         </div>
                     </div>
                 </div>
