마스크 구입처 추가

--- a/index.html
+++ b/index.html
@@ -570,6 +570,7 @@
                       <ul class="mt10">
                         <li>우체국은 1인 5매 제한(전화해보시고 가시는 것이 좋습니다.)</li>
                         <li>타 정보는 업데이트 중에 있습니다.</li>
+                        <li>마스크 <a href="https://coronamask.kr">온라인 구매</a> 바로가기</li>
                       </ul>
                     </div>
                   </div>
@@ -598,6 +599,10 @@
 
                     <div class="card-body">
                       <div class="accordion" id="accordionExample">
+
+                        <a class="btn btn-primary" target="_blank" style="margin-bottom:1rem; width:100%;" href="https://gis.jeju.go.kr/crn/index.do" role="button">제주도청제공 확진자 이동동선 및 안심존</a>
+
+                        <p>위 링크에서 도청에서 정보를 직접 제공하고 있으므로, <span style="color:red; font-weight:bold;">아래 내용은 더이상 업데이트 하지 않습니다.</span></p>
 
                         <!-- 확진자 News 4 -->
                         <div class="card">
@@ -997,7 +1002,7 @@
                         <!-- //확진자 News 1 -->
 
                       </div>
-                      <a class="btn btn-primary" target="_blank" style="margin:1rem;" href="http://ncov.mohw.go.kr/bdBoardList_Real.do?brdId=1&brdGubun=12&ncvContSeq=&contSeq=&board_id=&gubun=" role="button">질병관리본부의 전국 확진자 이동동선</a>
+
                     </div>
                   </div>
                 </div>
