--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
 
                         <a class="btn btn-primary" target="_blank" style="margin-bottom:1rem; width:100%;" href="https://gis.jeju.go.kr/crn/index.do" role="button">제주도청제공 확진자 이동동선 및 안심존</a>
 
-                        <p>위 링크에서 도청에서 정보를 직접 제공하고 있으므로, <span style="color:red; font-weight:bold;">아래 내용은 더이상 업데이트 하지 않습니다.</span></p>
+                        <p>위 링크에서 지도로 확진자 이동경로를 도청에서 직접 제공하고 있으므로, <span style="color:red; font-weight:bold;">아래 내용은 더이상 업데이트 하지 않습니다.</span></p>
 
                         <!-- 확진자 News 4 -->
                         <div class="card">
