--- a/index.html
+++ b/index.html
@@ -556,8 +556,9 @@
           <div class="row">
             <div class="col-xl-12 col-lg-12">
               <div class="row">
+
                 <!-- 제주 약국 현황 -->
-                <div class="col-xl-12 col-lg-12">
+                <div class="col-xl-8 col-lg-12">
                   <div class="card shadow mb-4">
                     <!-- Card Header - Dropdown -->
                     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
@@ -575,7 +576,32 @@
                     </div>
                   </div>
                 </div>
-                <!-- //제주 최신 정보(최근 중국인 이동 경로) -->
+                <!-- //제주 약국 현황 -->
+
+                <!-- 제주 약국 현황 -->
+                <div class="col-xl-4 col-lg-12">
+                  <div class="card shadow mb-4">
+                    <!-- Card Header - Dropdown -->
+                    <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                      <h6 class="m-0 font-weight-bold text-danger">마스크 5부제</h6>
+                      <div class="right"><a class="new_window" href="http://www.moef.go.kr/com/synap/synapView.do?atchFileId=ATCH_000000000013363&fileSn=2" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div>
+                    </div>
+
+                    <div class="card-body">
+                      <ul class="mt10">
+                        <li>출생연도 끝자리 기준</li>
+                        <li>월 : 1, 6</li>
+                        <li>화 : 2, 7</li>
+                        <li>수 : 3, 8</li>
+                        <li>목 : 4, 9</li>
+                        <li>금 : 5, 0</li>
+                        <li>주말은 평일에 구입하지 못한 사람들에 한해 출생연도 여부 상관없이 구매가 가능</li>
+                        <li>마스크 구매시에는 운전면허증, 주민등록증, 여권 등의 신분증을 지참</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <!-- //제주 약국 현황 -->
 
               </div>
             </div>
