--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                   <div class="tab-pane fade" id="korea_semi_log_chart" role="tabpanel" style="height:35rem;">
                     <canvas id="myAreaChart_six"></canvas>
                   </div>
-                  <p style="margin-left: 2rem;">현재(<span id="치명률_날짜"></span>) 치명률 | 국내: <span id="치명률"></span>%, 세계: <span id="세계치명률"></span>% (치명률: 사망자/확진자 비율)</p>
+                  <p style="margin-left: 2rem;">현재(<span id="치명률_날짜"></span>) 치명률(사망자/확진자 비율) | 국내: <span id="치명률"></span>%, 세계: <span id="세계치명률"></span>%</p>
                 </div>
               </div>
             </div>
@@ -260,7 +260,7 @@
               <div class="card shadow mb-4 height-2">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-danger">국내 확진자 누적 현황</h6>
+                  <h6 class="m-0 font-weight-bold text-danger">국내 현황(클릭시 각 시도별 현황/확진자 이동경로로 이동)</h6>
                   <div class="right"><a class="new_window" href="http://ncov.mohw.go.kr/bdBoardList_Real.do?brdId=1&brdGubun=13&ncvContSeq=&contSeq=&board_id=&gubun=" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div>
                 </div>
                 <!-- Card Body -->
