--- a/index.html
+++ b/index.html
@@ -567,10 +567,10 @@
                     </div>
 
                     <div class="card-body">
+                      <a class="btn btn-primary" target="_blank" style="margin-bottom:1rem;margin-top:1rem; width:100%;" href="https://whereismask.com" role="button">주변 약국 위치 및 재고 현황</a>
                       <div id="jejuMedicineMap" style="width:100%;height:35rem;"></div>
                       <ul class="mt10">
-                        <li>우체국은 1인 5매 제한(전화해보시고 가시는 것이 좋습니다.)</li>
-                        <li>타 정보는 업데이트 중에 있습니다.</li>
+                        <li>우체국, 약국 전화해보시고 방문하시는 것이 좋습니다.</li>
                         <li>마스크 <a href="https://coronamask.kr">온라인 구매</a> 바로가기</li>
                       </ul>
                     </div>
