--- a/index.html
+++ b/index.html
@@ -52,78 +52,64 @@
     <h1 class="title float-left">
       <img src='img/live.svg' /> 라이브 코로나 맵</h1>
     <h6 class="float-right">
+      <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
+        <i class="fa fa-times"></i>
+      </button>
       <span class="text-update"></span> 최종 업데이트(일일 오전과 오후 질병관리본부 브리핑 자료를 근거로 업데이트)</h6>
   </header>
   <!-- Page Wrapper -->
   <div id="wrapper">
+    <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+      <!-- Heading -->
+      <div class="sidebar-heading">
+        <i class="fas fa-fw fa-chart-area"></i> 현황
+      </div>
+      <!-- Nav Item - Pages Collapse Menu -->
+      <li class="nav-item">
+        <a class="nav-link" href="#casesStatus">
+          <span>확진자 현황</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#koreaCasesStatus">
+          <span>한국 현황</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#worldCasesStatus">
+          <span>세계 현황</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#jejuCasesStatus">
+          <span>제주도 현황</span>
+        </a>
+      </li>
+      <!-- Divider -->
+      <hr class="sidebar-divider">
 
+      <!-- Nav Item - Pages Collapse Menu -->
+      <li class="nav-item">
+        <a class="nav-link" href="#safetyRule">
+          <span>안전수칙, 팩트체크, 소상공인 지원사업, 아이돌봄 지원사업</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#jejuMedicine">
+          <span>제주도 마스크, 손세정제 구입처</span>
+        </a>
+      </li>
+
+      <!-- Divider -->
+      <hr class="sidebar-divider d-none d-md-block">
+
+      <!-- Sidebar Toggler (Sidebar) -->
+      <div class="text-center d-none d-md-inline">
+        <button class="rounded-circle border-0" id="sidebarToggle"></button>
+      </div>
+    </ul>
     <!-- Content Wrapper -->
     <div id="content-wrapper" class="container-wrap">
-      <!-- Mobile -->
-      <div class="m-header">
-        <div class="pos-f-t">
-          <!-- Nav -->
-          <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <h1 class="title" style="vertical-align: middle;">
-              <img src='img/live.svg' /> 라이브 코로나 맵</h1>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          </nav>
-          <!-- //Nav -->
-          <!-- Collapse -->
-          <div class="collapse navbar-collapse bg-light" id="navbarToggleExternalContent">
-            <div class="p-4">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                  <a href="#casesStatus"><i class="fas fa-caret-right"></i> 확진자 현황</a>
-                </li>
-                <li class="nav-item">
-                  <a href="#koreaCasesStatus"><i class="fas fa-caret-right"></i> 한국 현황</a>
-                </li>
-                <li class="nav-item">
-                  <a href="#worldCasesStatus"><i class="fas fa-caret-right"></i> 세계 현황</a>
-                </li>
-                <li class="nav-item">
-                  <a href="#safetyRule"><i class="fas fa-caret-right"></i> 안전수칙, 팩트체크, 소상공인 지원사업, 아이돌봄 지원사업</a>
-                </li>
-                <li class="nav-item">
-                  <a href="#jejuMedicine"><i class="fas fa-caret-right"></i> 제주도 마스크, 손세정제 구입처</a>
-                </li>
-                <li class="nav-item">
-                  <a href="#jejuCasesStatus"><i class="fas fa-caret-right"></i> 제주도 현황</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <!-- //Collapse -->
-        </div>
-      </div>
-      <!-- //Mobile -->
-      <!-- Sidebar -->
-      <div class="side-nav">
-        <ul>
-          <li>
-            <a href="#casesStatus"><i class="fas fa-caret-right"></i> 확진자 현황</a>
-          </li>
-          <li>
-            <a href="#koreaCasesStatus"><i class="fas fa-caret-right"></i> 한국 현황</a>
-          </li>
-          <li>
-            <a href="#worldCasesStatus"><i class="fas fa-caret-right"></i> 세계 현황</a>
-          </li>
-          <li>
-            <a href="#safetyRule"><i class="fas fa-caret-right"></i> 안전수칙, 팩트체크, 소상공인 지원사업, 아이돌봄 지원사업</a>
-          </li>
-          <li class="nav-item">
-            <a href="#jejuMedicine"><i class="fas fa-caret-right"></i> 제주도 마스크, 손세정제 구입처</a>
-          </li>
-          <li>
-            <a href="#jejuCasesStatus"><i class="fas fa-caret-right"></i> 제주도 현황</a>
-          </li>
-        </ul>
-      </div>
-      <!-- //Sidebar -->
       <!-- Main Content -->
       <div id="content" class="content">
         <!-- Alert -->
@@ -1784,6 +1770,13 @@
     $("#btnAlertBannerClose").click(function() {
       // 맨 마지막 옵션인 "시간"만 변경하세요. 단위가 day -> hour로 변경되었습니다.
       setCookie("alertBannerClosed", bannerCount, 12);
+    });
+
+
+    // Toggle the side navigation
+    $("#sidebarToggle, #sidebarToggleTop").on('click', function(e) {
+      $(".content").toggleClass("expended");
+      $(this).children('i').toggleClass("fa-times fa-bars");
     });
 
     // 배너를 숨기고 싶으면 아래 코드를 주석처리하세요
