카카오 기부 추가

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
 <!-- Page Heading -->
 
 <body id="page-top">
+  <div class="floating-kakao">
+    <a href="https://together.kakao.com/tags/%EC%BD%94%EB%A1%9C%EB%82%9819" target="_blank"></a>
+  </div>
   <header>
     <h1 class="title float-left">
       <img src='img/live.svg' /> 라이브 코로나 맵</h1>
@@ -106,6 +109,14 @@
       <!-- Sidebar Toggler (Sidebar) -->
       <div class="text-center d-none d-md-inline">
         <button class="rounded-circle border-0" id="sidebarToggle"></button>
+      </div>
+
+      <div class="kakao-together">
+        <a href="https://together.kakao.com/tags/%EC%BD%94%EB%A1%9C%EB%82%9819" target="_blank">
+          <p>[긴급모급]</p>
+          <p>코로나19, 함께 이겨내요!</p>
+          <img src="./img/kakao_img.png" alt="긴급모급 코로나19, 함께 이겨내요!" />
+        </a>
       </div>
     </ul>
     <!-- Content Wrapper -->
