크롤러 업데이트

--- a/index.html
+++ b/index.html
@@ -1599,6 +1599,7 @@
     <i class="fas fa-angle-up"></i>
   </a>
 
+  <script src="크롤러_지역별현황.js"></script>
   <script src="totalDataSet.js"></script>
   <script>
     var data = marker;
