--- a/index.html
+++ b/index.html
@@ -585,15 +585,51 @@
                     </div>
 
                     <div class="card-body">
-                      <ul class="mt10">
-                        <li>출생연도 끝자리 기준</li>
-                        <li>월 : 1, 6</li>
-                        <li>화 : 2, 7</li>
-                        <li>수 : 3, 8</li>
-                        <li>목 : 4, 9</li>
-                        <li>금 : 5, 0</li>
-                        <li>주말은 평일에 구입하지 못한 사람들에 한해 출생연도 여부 상관없이 구매가 가능</li>
-                        <li>마스크 구매시에는 운전면허증, 주민등록증, 여권 등의 신분증을 지참</li>
+                      <table class="table table-striped table-responsive text-center">
+                        <thead>
+                          <tr class="row">
+                            <th class="col-8">출생연도 끝자리</th>
+                            <th class="col-4">요일</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr class="row">
+                            <td class="col-8">1 , 6</td>
+                            <td class="col-4">월요일</td>
+                          </tr>
+                          <tr class="row">
+                            <td class="col-8">2 , 7</td>
+                            <td class="col-4">화요일</td>
+                          </tr>
+                          <tr class="row">
+                            <td class="col-8">3 , 8</td>
+                            <td class="col-4">수요일</td>
+                          </tr>
+                          <tr class="row">
+                            <td class="col-8">4 , 9</td>
+                            <td class="col-4">목요일</td>
+                          </tr>
+                          <tr class="row">
+                            <td class="col-8">5 , 0</td>
+                            <td class="col-4">금요일</td>
+                          </tr>
+                          <tr class="row">
+                            <td class="col-8">출생연도 관계없이 <br/>평일에 구입하지 못한 사람들 구매 가능</td>
+                            <td class="col-4">주말<br/>(토 , 일)</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                      <h5 style="font-weight: 600;">마스크 직접 구매</h5>
+                      <ul>
+                        <li>운전면허증, 주민등록증, 여권 등의 신분증을 지참</li>
+                      </ul>
+                      <!-- <p>운전면허증, 주민등록증, 여권 등의 신분증을 지참</p> -->
+                      <h5 style="font-weight: 600;">마스크 대리 구매</h5>
+                      <ul>
+                        <li>주민등록등본상 동거인이 5부제 해당 요일에 대리 구매 가능</li>
+                        <li>본인 신분증과 대상자가 병기된 주민등록등본 지참</li>
+                        <li><b>대상</b> : 2010년 이후 출생한 어린이, 1940년 이전 출생한 80살 이상 노인, 장기요양급여 수급자, 장애인 등</li>
+                        <li><b>구입처</b> : 약국(3월 9일부터) / 우체국, 농협, 하나로마트(3월 16일부터)</li>
                       </ul>
                     </div>
                   </div>
