--- a/index.html
+++ b/index.html
@@ -1730,10 +1730,10 @@
   <!-- Page level plugins -->
   <script src="vendor/chart.js/Chart.min.js"></script>
 
-  <!-- Page level custom scripts -->
-  <script src="js/demo/chart-area-demo.js"></script>
-  <script src="js/demo/chart-pie-demo.js"></script>
-  <script src="js/demo/chart-bar-demo.js"></script>
+  <!-- 차트를 그리고 싶으시면 아래 파일을 참고해주세요. -->
+  <script src="js/chart/chart-area.js"></script>
+  <script src="js/chart/chart-pie.js"></script>
+  <script src="js/chart/chart-bar.js"></script>
 
   <!-- Page level plugins -->
   <script src="vendor/datatables/jquery.dataTables.min.js"></script>
