--- a/index.html
+++ b/index.html
@@ -571,13 +571,15 @@
                   <div class="card shadow mb-4">
                     <!-- Card Header - Dropdown -->
                     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                      <h6 class="m-0 font-weight-bold text-danger">제주 마스크 및 손세정제 구입처(우체국)</h6>
+                      <h6 class="m-0 font-weight-bold text-danger">마스크 재고 맵</h6>
                       <!-- <div class="right"><a class="new_window" href="#" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div> -->
                     </div>
 
                     <div class="card-body">
-                      <a class="btn btn-primary" target="_blank" style="margin-bottom:1rem;margin-top:1rem; width:100%;" href="https://whereismask.com" role="button">주변 약국 위치 및 재고 현황</a>
-                      <div id="jejuMedicineMap" style="width:100%;height:35rem;"></div>
+                      <!-- <a class="btn btn-primary" target="_blank" style="margin-bottom:1rem;margin-top:1rem; width:100%;" href="https://whereismask.com" role="button">주변 약국 위치 및 재고 현황</a> -->
+                      <!-- <div id="jejuMedicineMap" style="width:100%;height:35rem;"></div> -->
+                      <iframe src="https://mask.livecorona.co.kr" frameborder="0" style="border:0;width:100%;height:35rem;" allow="geolocation"></iframe>
+
                       <ul class="mt10">
                         <li>우체국, 약국 전화해보시고 방문하시는 것이 좋습니다.</li>
                         <li>마스크 <a href="https://coronamask.kr">온라인 구매</a> 바로가기</li>
