--- a/index.html
+++ b/index.html
@@ -90,6 +90,15 @@
           <span>제주도 현황</span>
         </a>
       </li>
+
+      <!-- Divider -->
+      <hr class="sidebar-divider">
+
+      <li class="nav-item">
+        <a class="nav-link" href="#maskMap">
+          <span>마스크 재고 맵</span>
+        </a>
+      </li>
       <!-- Divider -->
       <hr class="sidebar-divider">
 
@@ -559,7 +568,7 @@
             </div>
           </div>
 
-          <div class="anchor" id="jejuMedicine"></div>
+          <div class="anchor" id="maskMap"></div>
 
           <!-- 제주도 현황 -->
           <div class="row">
@@ -575,15 +584,17 @@
                       <!-- <div class="right"><a class="new_window" href="#" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div> -->
                     </div>
 
-                    <div class="card-body">
+                    <div class="card-body" style="padding-top:0px;padding-left: 0px;padding-right: 0px;">
                       <!-- <a class="btn btn-primary" target="_blank" style="margin-bottom:1rem;margin-top:1rem; width:100%;" href="https://whereismask.com" role="button">주변 약국 위치 및 재고 현황</a> -->
                       <!-- <div id="jejuMedicineMap" style="width:100%;height:35rem;"></div> -->
-                      <iframe src="https://mask.livecorona.co.kr" frameborder="0" style="border:0;width:100%;height:35rem;" allow="geolocation"></iframe>
+                      <iframe src="https://mask.livecorona.co.kr" frameborder="0" style="border:0;width:100%;height:35rem;padding-top:0;"allow="geolocation"></iframe>
 
-                      <ul class="mt10">
-                        <li>우체국, 약국 전화해보시고 방문하시는 것이 좋습니다.</li>
-                        <li>마스크 <a href="https://coronamask.kr">온라인 구매</a> 바로가기</li>
-                      </ul>
+                      <div style="padding-left:20px;">
+                        <ul class="mt10">
+                          <li>우체국, 약국 전화해보시고 방문하시는 것이 좋습니다.</li>
+                          <li>마스크 <a href="https://coronamask.kr">온라인 구매</a> 바로가기</li>
+                        </ul>
+                      </div>
                     </div>
                   </div>
                 </div>
