--- a/index.html
+++ b/index.html
@@ -225,12 +225,12 @@
                         <div class="count-text mb-3"><span id="제주확진자"></span>명</div>
                     </div>
                     <div class="col-lg-4">
-                        <h6>사망자</h6>
-                        <div class="count-text"><span id="제주사망자"></span>명</div>
+                      <h6>완치자</h6>
+                      <div class="count-text"><span id="제주완치"></span>명</div>
                     </div>
                     <div class="col-lg-4">
-                        <h6>완치자</h6>
-                        <div class="count-text"><span id="제주완치"></span>명</div>
+                      <h6>사망자</h6>
+                      <div class="count-text"><span id="제주사망자"></span>명</div>
                     </div>
                   </div>
                 </div>
@@ -587,10 +587,11 @@
                     <div class="card-body" style="padding-top:0px;padding-left: 0px;padding-right: 0px;">
                       <!-- <a class="btn btn-primary" target="_blank" style="margin-bottom:1rem;margin-top:1rem; width:100%;" href="https://whereismask.com" role="button">주변 약국 위치 및 재고 현황</a> -->
                       <!-- <div id="jejuMedicineMap" style="width:100%;height:35rem;"></div> -->
-                      <iframe src="https://mask.livecorona.co.kr" frameborder="0" style="border:0;width:100%;height:35rem;padding-top:0;"allow="geolocation"></iframe>
+                      <iframe src="https://mask.livecorona.co.kr#mainContainer" frameborder="0" style="border:0;width:100%;height:35rem;padding-top:0;"allow="geolocation"></iframe>
 
                       <div style="padding-left:20px;">
                         <ul class="mt10">
+                          <li>해당 기능은 'https'에서만 지원합니다. 맵이 뜨지 않을 경우 <a href="https://livecorona.co.kr/">여기</a>로 접속해주세요.</li>
                           <li>우체국, 약국 전화해보시고 방문하시는 것이 좋습니다.</li>
                           <li>마스크 <a href="https://coronamask.kr">온라인 구매</a> 바로가기</li>
                         </ul>
