--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <img src='img/live.svg' /> 라이브 코로나 맵
     </h1>
     <h6 class="float-right">
-      <span class="text-update"></span> 최종 업데이트(일일 오전과 오후 질병관리본부 브리핑 자료를 근거로 업데이트)
+      <span id="text-update-datetime" class="text-update"></span> 최종 업데이트(일일 자정 질병관리본부 브리핑 자료)
     </h6>
     <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle">
         <i class="fas fa-chevron-circle-left"></i>
