Refactor data files and crawler
Files have been moved to data/ folder and is renamed in English. Also, the crawler logic is separated into world and Korea files and now directly pushes to GitHub after committing, rather than creating a PR.

--- a/index.html
+++ b/index.html
@@ -1685,8 +1685,8 @@
     <i class="fas fa-angle-up"></i>
   </a>
 
-  <script src="크롤러_세계확진자.js"></script>
-  <script src="크롤러_지역별현황.js"></script>
+  <script src="data/worldData.js"></script>
+  <script src="data/koreaRegionalData.js"></script>
   <script src="totalDataSet.js"></script>
 
   <script>
