--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <div class="anchor" id="casesStatus"></div>
 
         <!-- Begin Page Content -->
-        <div class="container-fluid">
+        <div class="container-fluid container-max">
 
           <div class="row">
             <!-- 현황 -->
