--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
                     </div>
                     <div class="card-body">
                       <div class="table-responsive">
-                        <div class="text-right mb-1">ex)198<span class="text-danger">1</span> : 월요일</div>
+                        <div class="text-right mb-1">ex)198<span class="text-danger">1</span>년생 : 월요일</div>
                         <table class="table table-striped text-center">
                           <colgroup>
                             <col style="width:50%" />
