footer 정보업데이트

--- a/index.html
+++ b/index.html
@@ -1706,8 +1706,15 @@
                         <a href="https://www.ncloud.com" target="_blank">네이버 클라우드 플랫폼</a>에서 서버 및 지도 API를 무상 지원합니다.
                       </li>
                       <li>
-                        모든 소스는 오픈되어 있습니다. 지역별 현황판을 만들고 싶으시거나 다음에도 비슷한 상황이 발생되었을 경우, 이 <a href="https://github.com/LiveCoronaDetector/livecod" target="_blank">프로젝트</a>를 사용해주세요. 데이터만 가져가시고 싶으신 경우 http://livecorona.co.kr/totalDataSet.js 에서 데이터를 가져가시기 바랍니다. 업데이트되는 파일입니다.
+                        모든 소스는 오픈되어 있습니다. 지역별 현황판을 만들고 싶으시거나 다음에도 비슷한 상황이 발생되었을 경우, 이 <a href="https://github.com/LiveCoronaDetector/livecod" target="_blank">프로젝트</a>를 사용해주세요.
                       </li>
+                      <br>
+
+                      <li>데이터만 가져가시고 싶으신 경우 아래 파일을 참고해주세요. 20분마다 업데이트되는 파일입니다.</li>
+                      <li>한국 데이터 : <a href="https://github.com/LiveCoronaDetector/livecod/tree/master/data" target="_blank">저장소로 바로가기</a>, <a href="https://livecorona.co.kr/data/koreaRegionalData.js" target="_blank">사용가능한 URL 바로가기</a></li>
+                      <li>해외 데이터 : <a href="https://github.com/LiveCoronaDetector/livecod/tree/master/data" target="_blank">저장소로 바로가기</a>, <a href="https://livecorona.co.kr/data/worldData.js" target="_blank">사용가능한 URL 바로가기</a></li>
+                      <li>누적 데이터 : <a href="https://github.com/LiveCoronaDetector/livecod/tree/master/data" target="_blank">저장소로 바로가기</a>, <a href="https://livecorona.co.kr/totalDataSet.js" target="_blank">사용가능한 URL 바로가기</a></li>
+
                     </ul>
                     <p class="text-right">
                       <a target="_blank" rel="noopener noreferrer" href="https://www.notion.so/5a68695448fc4724b8e1e070e919508d">담당자 및 도움을 주신 분들</a> |
