제주 현황 간격조정

--- a/index.html
+++ b/index.html
@@ -241,11 +241,11 @@
                     </div>
                     <div class="col-lg-4">
                       <h6>완치자</h6>
-                      <div class="count-text"><span id="제주완치"></span>명</div>
+                      <div class="count-text mb-3"><span id="제주완치"></span>명</div>
                     </div>
                     <div class="col-lg-4">
                       <h6>사망자</h6>
-                      <div class="count-text"><span id="제주사망자"></span>명</div>
+                      <div class="count-text mb-3"><span id="제주사망자"></span>명</div>
                     </div>
                   </div>
                 </div>
