--- a/index.html
+++ b/index.html
@@ -1820,6 +1820,7 @@
 
   <script src="data/worldData.js"></script>
   <script src="data/koreaRegionalData.js"></script>
+  <script src="data/koreaRegionalCumulativeData.js"></script>
   <script src="totalDataSet.js"></script>
 
   <script>
