--- a/index.html
+++ b/index.html
@@ -278,11 +278,11 @@
                   </ul>
                   <div class="tab-pane fade in show active" id="korea_line_chart" role="tabpanel" style="height:35rem;">
                     <div class="korea_chart_tags">
-                        <span class="tag_01">한국</span>
-                        <span class="tag_02">전일대비</span>
-                        <span class="tag_03">사망자</span>
-                        <span class="tag_04">완치자</span>
-                      </div>
+                      <span class="tag_01">한국</span>
+                      <span class="tag_02">전일대비</span>
+                      <span class="tag_03">사망자</span>
+                      <span class="tag_04">완치자</span>
+                    </div>
                     <canvas id="myAreaChart_four"></canvas>
                   </div>
                   <div class="tab-pane fade" id="korea_semi_log_chart" role="tabpanel" style="height:35rem;">
@@ -673,6 +673,10 @@
                     </div>
                     <!-- Card Body -->
                     <div class="card-body" style="height:35rem">
+                      <div class="korea_chart_tags">
+                        <span class="tag_01">한국 추이</span>
+                        <span class="tag_02">세계 추이</span>
+                      </div>
                       <canvas id="myAreaChart_five"></canvas>
                     </div>
                     <ul style="margin-left: 2rem">
@@ -1247,9 +1251,13 @@
                     <!-- Card Body -->
                     <div class="card-body">
                       <div class="chart-area">
-                        <p class="text-right">* 19년 일별 평균
-                          <a target="_blank" href="http://www.visitjeju.or.kr/web/bbs/bbsList.do?bbsId=TOURSTAT">입도객</a> 추가</p>
+                        <div class="korea_chart_tags">
+                          <span class="tag_01">내국인</span>
+                          <span class="tag_02">외국인</span>
+                          <span class="tag_04">중국인</span>
+                        </div>
                         <canvas id="myAreaChart_three"></canvas>
+                        <p class="text-right">* 19년 일별 평균<a target="_blank" href="http://www.visitjeju.or.kr/web/bbs/bbsList.do?bbsId=TOURSTAT">입도객</a> 추가</p>
                       </div>
                     </div>
                   </div>
