--- a/index.html
+++ b/index.html
@@ -1762,7 +1762,7 @@
                       <li>데이터만 가져가시고 싶으신 경우 아래 파일을 참고해주세요. 20분마다 업데이트되는 파일입니다.</li>
                       <li>한국 데이터 : <a href="https://github.com/LiveCoronaDetector/livecod/tree/master/data" target="_blank">저장소로 바로가기</a>, <a href="https://livecorona.co.kr/data/koreaRegionalData.js" target="_blank">사용가능한 URL 바로가기</a></li>
                       <li>해외 데이터 : <a href="https://github.com/LiveCoronaDetector/livecod/tree/master/data" target="_blank">저장소로 바로가기</a>, <a href="https://livecorona.co.kr/data/worldData.js" target="_blank">사용가능한 URL 바로가기</a></li>
-                      <li>누적 데이터 : <a href="https://github.com/LiveCoronaDetector/livecod/tree/master/data" target="_blank">저장소로 바로가기</a>, <a href="https://livecorona.co.kr/totalDataSet.js" target="_blank">사용가능한 URL 바로가기</a></li>
+                      <li>한국 누적 데이터 : <a href="https://github.com/LiveCoronaDetector/livecod/tree/master/data" target="_blank">저장소로 바로가기</a>, <a href="https://livecorona.co.kr/data/koreaRegionalCumulativeData.js" target="_blank">사용가능한 URL 바로가기</a></li>
 
                     </ul>
                     <p class="text-right">
