세계 누적데이터 자동화 업데이트

--- a/index.html
+++ b/index.html
@@ -1257,7 +1257,7 @@
                           <span class="tag_04">중국인</span>
                         </div>
                         <canvas id="myAreaChart_three"></canvas>
-                        <p class="text-right">* 19년 일별 평균<a target="_blank" href="http://www.visitjeju.or.kr/web/bbs/bbsList.do?bbsId=TOURSTAT">입도객</a> 추가</p>
+                        <!-- <p class="text-right">* 19년 일별 평균<a target="_blank" href="http://www.visitjeju.or.kr/web/bbs/bbsList.do?bbsId=TOURSTAT">입도객</a> 추가</p> -->
                       </div>
                     </div>
                   </div>
